--- a/src/Dint.Vision/Dint.Vision.csproj
+++ b/src/Dint.Vision/Dint.Vision.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
   </ItemGroup>
 
   <ItemGroup>
